# vx_chat_analysis

./: .env.example  .gitignore  PRD.md  README.md  SOURCE_STORY.md  main.py  pyproject.toml
libs/miroflow-tools/: pyproject.toml
libs/miroflow-tools/src/miroflow_tools/: __init__.py  manager.py
libs/miroflow-tools/src/miroflow_tools/dev_mcp_servers/: jina_scrape_llm_summary.py  search_and_scrape_webpage.py  stateless_python_server.py  task_planner.py
libs/miroflow-tools/src/miroflow_tools/mcp_servers/: audio_mcp_server.py  audio_mcp_server_os.py  browser_session.py  python_mcp_server.py  reading_mcp_server.py  reasoning_mcp_server.py  (+8 more)
scripts/: CoverMaster2.html  HTML_COVER_GENERATOR_README.md  analyze_xml_data.py  auto_cover_html.py  auto_cover_html2.py  test.py
src/wia/: __init__.py
src/wia/analysis/: cover_generator.py  data_cleaner.py  deduplicator.py  feishu_publisher.py  keyword_scorer.py  link_extractor.py  link_filter.py  llm_summarizer.py  scraper.py  topic_builder.py  user_profiler.py
src/wia/config/: settings.py
src/wia/core/: __init__.py  models.py  pipeline.py  stages.py
src/wia/io/: chat_loader.py  normalizer.py
src/wia/llm/: __init__.py  base_client.py  factory.py  util.py
src/wia/llm/providers/: __init__.py  anthropic_client.py  openai_client.py
src/wia/storage/: store.py
src/wia/tools/: feishu_base_app.py  fetch_article.py  mcp_client.py
src/wia/tools/test/: test_agent_auto_call.py  test_scrape_website.py  test_web_scraping.py  test_wechat_mcp.py
src/wia/web/: app.py
viewer/: LINK_CARD.md  README.md  topic_viewer.html
